# prisoner_dilemma_simulator

./: Cargo.toml  README.md  executor.d  settings.ron
data/: menu.ui  resources.registry  scene.rgs
data/Scenes/: bugster.rgs  scene.rgs
data/UI/: start.ui  test.ui
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-wasm/: Cargo.toml
executor-wasm/src/: lib.rs
executor/src/: main.rs
game/: Cargo.toml
game-dylib/: Cargo.toml
game-dylib/src/: lib.rs
game/src/: bugster.rs  bugster_sprite.rs  lib.rs  test_script.rs
