
[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyroxed_base = { workspace = true }
PrisonerDilemmaSimulator = { path = "../game", optional = true }

[features]
default = ["PrisonerDilemmaSimulator", "fyroxed_base/default"]
dylib = ["fyroxed_base/dylib_engine"]
