
[package]
name = "game_dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
PrisonerDilemmaSimulator = { path = "../game", default-features = false }
fyrox.workspace = true

[features]
default = ["PrisonerDilemmaSimulator/default"]
dylib-engine = ["PrisonerDilemmaSimulator/dylib-engine"]
