
[package]
name = "game_dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prisoner_dilemma_simulator = { path = "../game", default-features = false }
fyrox.workspace = true

[features]
default = ["prisoner_dilemma_simulator/default"]
dylib-engine = ["prisoner_dilemma_simulator/dylib-engine"]
